7-policy-enforcement/policies/no-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prohibit-latest-tag
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: block-latest-tag
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Using the 'latest' tag for images is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
