7-policy-enforcement/policies/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: must-have-labels
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "The following labels are required: 'app', 'env'."
        pattern:
          metadata:
            labels:
              app: "?*"
              env: "?*"
